Empêche la dev d'envoyer des mail