@@ -40,7 +40,7 @@ class SpocServiceTest {
                 "sender@insee.fr", // sender.mail
                 defaultReceivers, // default.receiver.mail
                 addBalfOscar // receiver.mail.add.balf.oscar
-                );
+        );
     }
 
     @SuppressWarnings("unchecked")
@@ -56,8 +56,25 @@ class SpocServiceTest {
         return addrs;
     }
 
-    // --- 1) addBalfOscar=true : fusionne récepteurs (mail + défauts), nettoie doublons/blancs,
-    // envoie la requête
+    @SuppressWarnings("unchecked")
+    private static String getCcHeaderValueFrom(String body) throws Exception {
+        ObjectMapper om = new ObjectMapper();
+        Map<String, Object> root = om.readValue(body, Map.class);
+        Map<String, Object> messageTemplate = (Map<String, Object>) root.get("MessageTemplate");
+        if (messageTemplate == null) return null;
+        List<Map<String, Object>> headers =
+                (List<Map<String, Object>>) messageTemplate.get("Header");
+        if (headers == null) return null;
+
+        for (Map<String, Object> h : headers) {
+            if ("Cc".equalsIgnoreCase((String) h.get("Name"))) {
+                return (String) h.get("Value");
+            }
+        }
+        return null;
+    }
+
+    // --- 1) addBalfOscar=true : TO nettoyés, CC = défauts, et CC uniquement dans le header
     @Test
     void sendMail_addMode_mergesCleansAndSends() throws Exception {
         // stub SPOC 200
@@ -65,12 +82,17 @@ class SpocServiceTest {
 
         SpocService svc = newService(true, "balf@insee.fr");
 
-        Mail mail =
-                new Mail(
-                        "Sujet X",
-                        "Contenu Y",
-                        Arrays.asList(
-                                "rga@insee.fr", "  ", null, "rga@insee.fr")); // doublon + blancs
+        Mail mail = new Mail();
+        mail.setObject("Sujet X");
+        mail.setMessage("Contenu Y");
+        // TO = RGA (+ blancs / null / doublon)
+        mail.setTo(
+                Arrays.asList(
+                        "rga@insee.fr", "  ", null, "rga@insee.fr"  // doublon + blancs
+                ));
+        // CC vide au départ
+        mail.setCc(List.of());
+
         svc.sendMail(mail);
 
         // 1 seule requête envoyée
@@ -79,17 +101,22 @@ class SpocServiceTest {
 
         LoggedRequest req = requests.getFirst();
 
-        // En-têtes
+        // En-têtes HTTP
         assertThat(req.getHeader("Content-Type")).isEqualTo("application/json");
         assertThat(req.getHeader("Accept")).isEqualTo("application/json");
         String expectedAuth =
                 "Basic " + Base64.getEncoder().encodeToString("user1:pass1".getBytes());
         assertThat(req.getHeader("Authorization")).isEqualTo(expectedAuth);
 
-        // Corps JSON : sujets + destinataires fusionnés et dédoublonnés
         String body = req.getBodyAsString();
+
+        // Recipients : uniquement les TO nettoyés (ici : rga)
         List<String> addrs = getRecipientAddressesFrom(body);
-        assertThat(addrs).containsExactlyInAnyOrder("rga@insee.fr", "balf@insee.fr");
+        assertThat(addrs).containsExactly("rga@insee.fr");
+
+        // Header Cc : contient les défauts
+        String ccValue = getCcHeaderValueFrom(body);
+        assertThat(ccValue).isEqualTo("balf@insee.fr");
 
         // Champs MessageTemplate
         assertThat(body)
@@ -99,38 +126,58 @@ class SpocServiceTest {
                 .contains("\"ContentReference\":\"null\"");
     }
 
-    // --- 2) addBalfOscar=false : écrase les récepteurs par défaut
+    // --- 2) addBalfOscar=false : écrase les récepteurs par défaut (TO = défauts, CC vide)
+    // --- 2) addBalfOscar=false : n'ajoute pas les récepteurs par défaut
     @Test
-    void sendMail_replaceMode_overridesReceivers() throws Exception {
+    void sendMail_replaceMode_doesNotAddDefaultReceivers() throws Exception {
         stubFor(post(urlEqualTo("/spoc")).willReturn(aResponse().withStatus(200)));
 
         SpocService svc = newService(false, "balf@insee.fr");
 
-        // Même si on passe "rga@insee.fr", on doit n'envoyer qu'à "balf@insee.fr"
-        Mail mail = new Mail("S", "C", List.of("rga@insee.fr"));
+        // Même si on a un defaultReceiver, en mode addBalfOscar=false
+        // on n'ajoute PAS "balf@insee.fr" -> seul le TO d'origine est utilisé.
+        Mail mail = new Mail();
+        mail.setObject("S");
+        mail.setMessage("C");
+        mail.setTo(List.of("rga@insee.fr"));
+        mail.setCc(List.of());
+
         svc.sendMail(mail);
 
         List<LoggedRequest> requests = server.findAll(postRequestedFor(urlEqualTo("/spoc")));
         assertThat(requests).hasSize(1);
 
-        List<String> addrs = getRecipientAddressesFrom(requests.getFirst().getBodyAsString());
-        assertThat(addrs).containsExactly("balf@insee.fr");
+        String body = requests.getFirst().getBodyAsString();
+        List<String> addrs = getRecipientAddressesFrom(body);
+        // En mode "replace=false" actuel : on garde le TO fourni, on ignore les defaults
+        assertThat(addrs).containsExactly("rga@insee.fr");
+
+        // Pas de CC automatique dans ce mode
+        String ccValue = getCcHeaderValueFrom(body);
+        assertThat(ccValue).isNull();
     }
+
 
     // --- 3) Aucun destinataire après règles -> pas d’appel HTTP
     @Test
     void sendMail_noReceivers_noCall() {
         // Pas de stub nécessaire si pas d'appel
-        SpocService svc = newService(false);
+        SpocService svc = newService(false); // pas de défauts
 
-        Mail mail = new Mail("S", "C", Arrays.asList(null, "   "));
+        Mail mail = new Mail();
+        mail.setObject("S");
+        mail.setMessage("C");
+        // TO avec null + blancs -> sera nettoyé, mais pas de défauts => 0 destinataire
+        mail.setTo(Arrays.asList(null, "   "));
+        mail.setCc(List.of());
+
         svc.sendMail(mail);
 
         List<LoggedRequest> requests = server.findAll(postRequestedFor(urlEqualTo("/spoc")));
         assertThat(requests).isEmpty();
     }
 
-    // --- 4) sendMailTo délègue bien à sendMail (et fusionne si add=true)
+    // --- 4) sendMailTo délègue bien à sendMail (TO = param, CC = défauts si add=true)
     @Test
     void sendMailTo_delegates_andMerges() throws Exception {
         stubFor(post(urlEqualTo("/spoc")).willReturn(aResponse().withStatus(200)));
@@ -142,8 +189,14 @@ class SpocServiceTest {
         List<LoggedRequest> requests = server.findAll(postRequestedFor(urlEqualTo("/spoc")));
         assertThat(requests).hasSize(1);
 
-        List<String> addrs = getRecipientAddressesFrom(requests.getFirst().getBodyAsString());
-        assertThat(addrs).containsExactlyInAnyOrder("rga@insee.fr", "default@insee.fr");
+        String body = requests.getFirst().getBodyAsString();
+        List<String> addrs = getRecipientAddressesFrom(body);
+        // TO uniquement : rga
+        assertThat(addrs).containsExactly("rga@insee.fr");
+
+        // CC = defaultReceiver
+        String ccValue = getCcHeaderValueFrom(body);
+        assertThat(ccValue).isEqualTo("default@insee.fr");
     }
 
     // --- 5) Réponse 500 : on tente l’envoi (1 requête), pas d’exception levée
@@ -152,7 +205,14 @@ class SpocServiceTest {
         stubFor(post(urlEqualTo("/spoc")).willReturn(aResponse().withStatus(500).withBody("OOPS")));
 
         SpocService svc = newService(true, "balf@insee.fr");
-        svc.sendMail(new Mail("S", "C", List.of("rga@insee.fr")));
+
+        Mail mail = new Mail();
+        mail.setObject("S");
+        mail.setMessage("C");
+        mail.setTo(List.of("rga@insee.fr"));
+        mail.setCc(List.of());
+
+        svc.sendMail(mail);
 
         List<LoggedRequest> requests = server.findAll(postRequestedFor(urlEqualTo("/spoc")));
         assertThat(requests).hasSize(1);
